# Smart-Email-Prioritization

./: Cleaner.py  FeatureExtractor.py  Summarizer.py  final_analytics_data.csv  main.py  preprocessed_emails.csv  preprocessed_emails.pkl  preprocessing.py  pyproject.toml  summarizer.py
