[project]
name = "smart-email-prioritization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "kagglehub>=1.0.0",
    "nltk>=3.9.4",
    "pandas>=2.3.3",
    "sentencepiece>=0.2.1",
    "torch>=2.0.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.3",
    "transformers>=4.30.0",
]
